small fixes List -> ImmutableList
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/parallel-function-analysis@44586 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c